# Abura

./: .gitignore  Cargo.toml  README.md
docs/superpowers/plans/: 2026-05-16-abura-engine.md
docs/superpowers/specs/: 2026-05-16-abura-engine-design.md
examples/sprite_demo/: main.rs
src/: app.rs  assets.rs  input.rs  lib.rs
src/ecs/: components.rs  resources.rs  systems.rs
src/platform/: native.rs  wasm.rs
src/renderer/: mod.rs  pipeline.rs  sprite.rs  texture.rs  tilemap.rs
src/shaders/: sprite.wgsl
