[package]
name = "abura"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
tilemap = []
audio = []

[dependencies]
winit = "0.30"
wgpu = { version = "0.20", features = ["webgl"] }
hecs = "0.10"
glam = "0.28"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
bytemuck = { version = "1.16", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
pollster = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gilrs = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Window", "Document", "HtmlCanvasElement",
  "Request", "Response", "RequestInit", "RequestMode",
] }
console_error_panic_hook = "0.1"
console_log = "0.2"

[dev-dependencies]
approx = "0.5"
